i have updated the README file.

--- a/README
+++ b/README
@@ -38,7 +38,7 @@ The file getipaddresses.cpp is the app written in C++. This app takes the domain
 
 At the moment, we have some domain names in the input file, and have also uploaded the file with the results in data.txt. When ever the app is run, the data.txt file is truncated and all previous data is removed and new data is written in it.
 
-Since this app is being released as an open source app, you are allowed to modify this app in any way as you like, but do follow the rules and regulations set by the open source licence. Also you may update the file domainnames.txt and add more domain names to the file. Remember, this app is for every one, and this will act as a database for the IP-Address of the domain names just incase the SOPA and/or PIPA get passed and websites get their dns records messed up with. Even though the dns records get messed up, we can still access those websites using their IP-Addresses as long as the server hosting the website is still online.
+Since this app is being released as an open source app, you are allowed to modify this app in any way as you like, but do follow the rules and regulations set by the open source licence. Also you may update the file domainnames.txt and add more domain names to the file. Remember, this app is for every one, and this will act as a database for the IP-Address of the domain names just incase the SOPA and/or PIPA get passed and websites get their dns records messed up with. Even though the dns records get messed up, we can still access those websites using their IP-Addresses as long as the server hosting the website is still online. I recommend you to fork this project and imporve this app, and also add more domain names to the input file.
 
 We have to protect ourselves against the SOPA and PIPA and have to protect our interests.
 
